[refactor] Update remaining client and launcher code for Java 21
Group the remaining mixed migration rewrites in the desktop client and launcher stack into one area-focused commit.